添加取消交易的接口
