# public/swagger.json
@@ -731,6 +731,86 @@
         }
       }
     },
+    "/trade/{tid}": {
+      "delete": {
+        "summary": "取消交易",
+        "description": "只有book state 为 2，3 才可以取消交易",
+        "parameters": [{
+          "name": "tid",
+          "in": "query",
+          "description": "trade id",
+          "type": "number"
+        }],
+        "responses": {
+          "200": {
+            "description": "正在送货",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "tradeId": {
+                  "type": "number"
+                },
+                "buyerId": {
+                  "type": "number"
+                },
+                "sellerId": {
+                  "type": "number"
+                },
+                "bookId": {
+                  "type": "number"
+                },
+                "publisherId": {
+                  "type": "number"
+                },
+                "name": {
+                  "type": "string"
+                },
+                "author": {
+                  "type": "string"
+                },
+                "img": {
+                  "type": "string"
+                },
+                "campus": {
+                  "type": "string"
+                },
+                "state": {
+                  "type": "number"
+                },
+                "description": {
+                  "type": "string"
+                },
+                "phoneNum": {
+                  "type": "number"
+                },
+                "comment": {
+                  "type": "string"
+                },
+                "price": {
+                  "type": "number"
+                }
+              },
+              "example": {
+                "tradeId": 1,
+                "buyerId": 15331059,
+                "sellerId": 15331060,
+                "bookId": 2,
+                "publisherId": 15331060,
+                "name": "test book2",
+                "author": "tinglideng",
+                "img": "default.jpg",
+                "campus": "sysu",
+                "state": 1,
+                "description": "test",
+                "phoneNum": "13719177172",
+                "comment": "计算机 测试",
+                "price": 13.7
+              }
+            }
+          }
+        }
+      }
+    },
     "/trade/{tid}/send": {
       "post": {
         "summary": "标记图书开始送货",
